# dns-gcp-tutorial

./: .gitignore  Makefile
.github/workflows/: ci.yml
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: config.py  export_openapi.py  main.py
backend/src/db/: bootstrap.py  session.py
backend/src/models/: __init__.py  note.py
backend/src/routers/: notes.py
backend/src/schemas/: __init__.py  note.py
frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: notes-app.tsx
frontend/lib/api/: notes.ts
frontend/lib/queries/: notes.ts
frontend/types/: openapi.d.ts
openapi/: openapi.json
