[project]
name = "deploy-app-with-dns"
version = "0.1.0"
description = ""
authors = [
    {name = "phucpham09",email = "phuc_ph@theinfitech.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# App chạy từ thư mục backend (uvicorn src.main:app), không publish package — tránh Poetry 2 cài “root project” thiếu packages.
[tool.poetry]
package-mode = false

[tool.fastapi]
entrypoint = "src.main:app"
